--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "jetifier": "^1.6.5",
     "react": "16.9.0",
     "react-native": "0.61.5",
@@ -31,6 +32,7 @@
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.58.0",
     "prettier": "^1.19.1",
+    "react-native-iphone-x-helper": "^1.2.1",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
